cmake_minimum_required(VERSION 3.9)
project(30_Day_Challenge)

set(CMAKE_CXX_STANDARD 11)

add_executable(30_Day_Challenge
        Day00.cpp
        Day01.cpp
        Day02.cpp
        Day03.cpp
        Day04.cpp
        Day05.cpp
        Day06.cpp
        Day07.cpp
        Day08.cpp
        Day09.cpp
        Day10.cpp)
